Rebase changes from main into 2.5-event2 (#2322)
* dd-2286 - fix conversion issues in the Updating guide (#2290)

* dd-2286 - Fix conversion issues with Update guide

* dd-2286 - Fix procedure numbering in container procedure

* dd-2286 - peer review fixes and removing extraneous files

* added peer review suggestion

* dd-updguide - Add experimental tagk to fix formatting (#2293)

* Updates to updating-aap (#2297)

Performing a sanity check of titles/updating-aap.
Correcting typos, removing unncessary comments etc.

Document 2.5 to 2.5.x upgrade steps

https://issues.redhat.com/browse/AAP-31734

* Updating title attributes (#2299)

* Updating UI and links in API overview (#2295)

* Updating UI and links in API overview

Update Automation execution API overview

https://issues.redhat.com/browse/AAP-32935

Affects `title/controller-api-overview`

* Final edits to links in API overview

* API overview adding links

* fixing xref (#2303)

* fixing xref

* PR suggestion

* This commit fixes links for the errata advsories in patch release 2.5-2. (#2305)

RPM
Container (namespac)
Container (cluster)
Bundle Installer

* Adding debugging chapter (#2277)

* Adding updating receptors section to op-mesh guide (#2309)

* adding ID (#2315)

* Removed extraneous internal numeration from the errata. (#2318)

* Removed extraneous internal numeration from the errata.

Fixes an issue raised by Satoe.

* Update aap-25-2-patch-release-7-oct-2024.adoc

* Update aap-25-2-patch-release-7-oct-2024.adoc

---------

Co-authored-by: Michelle McCausland <141345897+michellemacrh@users.noreply.github.com>
Co-authored-by: g-murray <147741787+g-murray@users.noreply.github.com>
Co-authored-by: EMcWhinn <122449381+EMcWhinn@users.noreply.github.com>
Co-authored-by: Robert Grange <95885266+rogrange@users.noreply.github.com>

--- a/downstream/modules/platform/proc-operator-deploy-redis.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-redis.adoc
@@ -1,18 +1,20 @@
-= Deploying clustered Redis on {OperatorPlatform}
+[id="operator-deploy-redis"]
 
-When you create an {PlatformNameShort} instance through the {OperatorPlatform}, standalone Redis is assigned by default. 
+= Deploying clustered Redis on {OperatorPlatformName}
+
+When you create an {PlatformNameShort} instance through the {OperatorPlatformNameShort}, standalone Redis is assigned by default. 
 To deploy clustered Redis, use the following procedure.
 
 //Add a link to the section when ready
 For more information about Redis, refer to Caching and queueing system in the _Planning your installation_ guide.
 
 .Prerequisites
-* You have installed an {OperatorPlatform} deployment.
+* You have installed an {OperatorPlatformNameShort} deployment.
 
 .Procedure
 . Log in to {OCP}. 
 . Navigate to menu:Operators[Installed Operators].
-. Select your {OperatorPlatform} deployment.
+. Select your {OperatorPlatformNameShort} deployment.
 . Select the *Details* tab. 
 . On the *{PlatformNameShort}* tile click btn:[Create instance].
 .. For existing instances, you can edit the YAML view by clicking the {MoreActionsIcon} icon and then btn:[Edit AnsibleAutomationPlatform].
