--- a/downstream/modules/platform/proc-installing-with-internet.adoc
+++ b/downstream/modules/platform/proc-installing-with-internet.adoc
@@ -28,13 +28,15 @@ v.{PlatformVers} for RHEL 8 for x86_64
 $ sudo dnf install --enablerepo=ansible-automation-platform-2.5-for-rhel-8-x86_64-rpms ansible-automation-platform-installer
 ----
 +
-v.{PlatformVers} for RHEL 9 for x86-64
+v.{PlatformVers} for RHEL 9 for x86_64
 +
 ----
 $ sudo dnf install --enablerepo=ansible-automation-platform-2.5-for-rhel-9-x86_64-rpms ansible-automation-platform-installer
 ----
 
 [NOTE]
+====
 `dnf install` enables the repo as the repo is disabled by default.
+====
 
 When you use the RPM installer, the files are placed under the `/opt/ansible-automation-platform/installer` directory.
