--- a/downstream/titles/updating-aap/master.adoc
+++ b/downstream/titles/updating-aap/master.adoc
@@ -1,6 +1,9 @@
 :imagesdir: images
 :toclevels: 4
+:experimental:
+
 :context: updating-aap
+
 include::attributes/attributes.adoc[] 
 
 // Book Title
@@ -13,16 +16,9 @@ You can perform patch updates to your {PlatformNameShort} installation as update
 
 [NOTE]
 ====
-Upgrades from 2.4 to 2.5 are unsupported at this time. For more information, see https://access.redhat.com/solutions/7089196. 
+Upgrades from 2.4 to 2.5 are unsupported at this time. For more information, see this link:https://access.redhat.com/solutions/7089196[Knowledgebase article]. 
 ====
 
-// Assemblies go here, one for each install type (RPM, Container, Operator) 
-// Example:
-// include::platform/<assembly_file_name>.adoc[leveloffset=+1]
-
-// Assembly for RPM-based Ansible Automation Platform
 include::platform/assembly-update-rpm.adoc[leveloffset=+1]
-
-== {PlatformNameShort} on {OCPShort}
-
-include::platform/platform/proc-update-aap-on-ocp.adoc[leveloffset=+2]
+include::platform/assembly-update-container.adoc[leveloffset=+1]
+include::platform/assembly-update-ocp.adoc[leveloffset=+1]
