Adding appendix as part of event 2

--- a/downstream/assemblies/platform/assembly-appendix-operator-crs.adoc
+++ b/downstream/assemblies/platform/assembly-appendix-operator-crs.adoc
@@ -3,9 +3,7 @@ ifdef::context[:parent-context: {context}]
 
 [id="appendix-operator-crs_{context}"]
 
-= Appendix 
-
-== {PlatformName} custom resources 
+= Appendix: {PlatformName} custom resources 
 
 [role="_abstract"]
 
