Containerized installation - update postinstall information
Update postinstall info in Containerized installation.
- Add info for loading a license file
- Update postinstall section to denote required inventory file variables
- Some additional spelling/grammar/attribute clean up

Containerized installation - update postinstall information

https://issues.redhat.com/browse/AAP-32710

--- a/downstream/modules/platform/proc-downloading-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-downloading-containerized-aap.adoc
@@ -4,7 +4,7 @@
 
 = Downloading {PlatformNameShort}
 
-Choose the installer you need based on your {RHEL} environment internet connectivity and download the installer to your RHEL host.
+Choose the installer you need based on your {RHEL} environment internet connectivity and download the installer to your {RHEL} host.
 
 .Procedure
 
