--- a/downstream/modules/platform/proc-installing-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-installing-containerized-aap.adoc
@@ -32,7 +32,7 @@ Use the following example inventory file to perform an online installation for t
 # or the Red Hat documentation:
 # {URLContainerizedInstall}
 
-# This section is for your platform gateway hosts
+# This section is for your {Gateway} hosts
 # -----------------------------------------------------
 [automationgateway]
 aap.example.org
@@ -111,7 +111,7 @@ Use the following example inventory file to perform an online installation for t
 # or the Red Hat documentation:
 # {URLContainerizedInstall}
 
-# This section is for your platform gateway hosts
+# This section is for your {Gateway} hosts
 # -----------------------------------------------------
 [automationgateway]
 gateway1.example.org
@@ -195,7 +195,7 @@ eda_pg_username=<set your own>
 eda_pg_password=<set your own>
 ----
 
-.Redis configuration for an enterprise topology:
+.Redis configuration for an enterprise topology
 * Redis can be colocated with any other node in a clustered installation.
 
 * By default the `redis_mode` is set to `cluster`.
@@ -215,10 +215,9 @@ bundle_install=true
 bundle_dir=<full path to the bundle directory>
 ----
 
-
 .Configuring a HAProxy load balancer
 
-To configure a HAProxy load balancer in front of platform gateway with a custom CA cert, set the following inventory file variables under the `[all:vars]` group:
+* To configure a HAProxy load balancer in front of {Gateway} with a custom CA cert, set the following inventory file variables under the `[all:vars]` group:
 
 ----
 custom_ca_cert=<path_to_cert_crt>
@@ -227,8 +226,19 @@ gateway_main_url=<https://load_balancer_url>
 
 [NOTE] 
 ====
-HAProxy SSL passthrough mode is not supported with platform gateway.
+HAProxy SSL passthrough mode is not supported with {Gateway}.
 ====
+
+.Loading an {ControllerName} license file
+
+* To define the location of your {ControllerName} license file, set the following variable in the inventory file:
+
+----
+controller_license_file=<full_path_to_your_manifest_zip_file>
+----
+
+* To define the license file as part of the postinstall process instead, see xref:using-postinstall_{context}[Using the postinstall feature of containerized {PlatformNameShort}].
+
 
 == Running the installation command
 
