Event 2 migration content updates

--- a/downstream/modules/platform/proc-aap-create_eda.adoc
+++ b/downstream/modules/platform/proc-aap-create_eda.adoc
@@ -1,17 +1,17 @@
-[id="aap-create_controller"]
+[id="aap-create_eda"]
 
-= Creating an AutomationController object
+= Creating an EDA object
 
 [role=_abstract]
 
-Use the following steps to create an *AutomationController* custom resource object.
+Use the following steps to create an *EDA* custom resource object.
 
 .Procedure
 . Log in to *{OCP}*.
 . Navigate to menu:Operators[Installed Operators].
 . Select the {OperatorPlatformNameShort} installed on your project namespace.
-. Select the *Automation Controller* tab.
-. Click btn:[Create AutomationController]. You can create the object through the *Form view* or *YAML view*. The following inputs are available through the *Form view*.
+. Select the *Automation Hub* tab.
+. Click btn:[Create AutomationHub]. You can create the object through the *Form view* or *YAML view*. The following inputs are available through the *Form view*.
 . Enter a name for the new deployment.
 . In *Advanced configurations*:
 .. From the *Admin Password Secret* list, select your xref:create-secret-key-secret_aap-migration[secret key secret].
