--- a/downstream/modules/platform/proc-aap-create_hub.adoc
+++ b/downstream/modules/platform/proc-aap-create_hub.adoc
@@ -4,14 +4,16 @@
 
 [role=_abstract]
 
-Use the following steps to create an AutomationHub custom resource object.
+Use the following steps to create an *AutomationHub* custom resource object.
 
 .Procedure
 . Log in to *{OCP}*.
 . Navigate to menu:Operators[Installed Operators].
 . Select the {OperatorPlatformNameShort} installed on your project namespace.
 . Select the *Automation Hub* tab.
-. Click btn:[Create AutomationHub].
+. Click btn:[Create AutomationHub]. You can create the object through the *Form view* or *YAML view*. The following inputs are available through the *Form view*.
 . Enter a name for the new deployment.
-. In *Advanced configurations*, select your xref:create-secret-key-secret_aap-migration[secret key secret] and xref:create-postresql-secret_aap-migration[postgres configuration secret].
+. In *Advanced configurations*:
+.. From the *Admin Password Secret* list, select your xref:create-secret-key-secret_aap-migration[secret key secret].
+.. From the *Database Configuration Secret* list, select the xref:create-postresql-secret_aap-migration[postgres configuration secret].
 . Click btn:[Create].
