--- a/downstream/modules/platform/con-backup-aap.adoc
+++ b/downstream/modules/platform/con-backup-aap.adoc
@@ -10,10 +10,9 @@ Back up an existing {PlatformNameShort} instance by running the `.setup.sh` scri
 . Run the `./setup.sh` script following the example below:
 +
 ----
-$ ./setup.sh -e ‘backup_dir=/ansible/mybackup’ -e ‘use_compression=True’ @credentials.yml -b <1><2>
+$ ./setup.sh -e ‘backup_dir=/ansible/mybackup’ -e ‘use_compression=True’ @credentials.yml -b <1>
 ----
 <1> `backup_dir` specifies a directory to save your backup to.
-<2> `@credentials.yml` passes the password variables and their values encrypted via `ansible-vault`. [DOUBLE CHECK FOR NEW CONTENT]
 
 With a successful backup, a backup file is created at `/ansible/mybackup/automation-platform-backup-<date/time>.tar.gz` .
 
