Updated the note for a backup failure status.

--- a/downstream/modules/platform/proc-aap-controller-backup.adoc
+++ b/downstream/modules/platform/proc-aap-controller-backup.adoc
@@ -52,5 +52,5 @@ A backup tarball of the specified deployment is created and available for data r
 +
 [NOTE]
 ====
-If *Successful* is `False`, the backup has failed. Check the {ControllerName} operator logs for the error to fix the issue.
+If the status is `Failure`, the backup has failed. Check the {ControllerName} operator logs for the error to fix the issue.
 ====
