--- a/downstream/modules/platform/proc-account-linking.adoc
+++ b/downstream/modules/platform/proc-account-linking.adoc
@@ -9,7 +9,7 @@
 
 The first time you log in to {PlatformNameShort} 2.5, the platform searches through the existing services to locate a user account with the credentials you entered. When there is a match to an existing account, that account is registered and becomes centrally managed by the platform. Any subsequent component accounts in the system are orphaned. This can cause problems accessing the services in {PlatformNameShort}. 
 
-To address this problem, you can use the account linking procedure to authenticate from any of your existing component accounts and still be recognized by the platform. Linking accounts will associate existing component accounts with the same user profile. 
+To address this problem, use the account linking procedure to authenticate from any of your existing component accounts and still be recognized by the platform. Linking accounts associates existing component accounts with the same user profile. 
 
 [IMPORTANT]
 ====
@@ -28,7 +28,7 @@ If you have completed the upgrade process and have a legacy {PlatformNameShort} 
 . On the next screen, enter the legacy credentials for the component account you selected and click btn:[Log in].
 . If you have successfully linked your account, the next screen shows your username with a green checkmark beside it. If you have other legacy accounts that you want to link, enter those account credentials and click btn:[Link] to link them to your centralized {Gateway} account.
 . Click btn:[Submit] to complete linking your legacy accounts. 
-. After your accounts are linked, depending on your authentication method, you may be prompted to create a new username and password. These credentials will replace your legacy credentials for each component account. 
+. After your accounts are linked, depending on your authentication method, you might be prompted to create a new username and password. These credentials will replace your legacy credentials for each component account. 
 
 You can also link your legacy account manually by taking the following steps:
 
