--- a/downstream/modules/platform/proc-aap-controller-backup.adoc
+++ b/downstream/modules/platform/proc-aap-controller-backup.adoc
@@ -18,8 +18,7 @@ Use this procedure to back up a deployment of the controller, including jobs, in
 . Select the *Automation Controller Backup* tab.
 . Click btn:[Create AutomationControllerBackup].
 . Enter a *Name* for the backup.
-. Enter the *Deployment name* of the deployed {PlatformNameShort} instance being backed up.
-For example, if your {ControllerName} must be backed up and the deployment name is `aap-controller`, enter 'aap-controller' in the *Deployment name* field.
+. Enter the *Deployment name* of the deployed {PlatformNameShort} instance being backed up. The deployment name displays in the following format, `<deployment_name>-[web|task]`. For example, if your {ControllerName} must be backed up and the deployment name is 'automationcontroller-2b5a30e4-web` or `automationcontroller-2b5a30e4-task', enter `automationcontroller` in the *Deployment name* field to filter the list down to applicable deployments.
 . If you want to use a custom, pre-created pvc:
 .. [Optional]: enter the name of the *Backup persistent volume claim*.
 .. [Optional]: enter the *Backup PVC storage requirements*, and *Backup PVC storage class*.
