--- a/downstream/modules/platform/proc-aap-create_eda.adoc
+++ b/downstream/modules/platform/proc-aap-create_eda.adoc
@@ -12,8 +12,8 @@ Use the following steps to create an *EDA* custom resource object.
 . Select the {OperatorPlatformNameShort} installed on your project namespace.
 . Select the *Automation Hub* tab.
 . Click btn:[Create AutomationHub]. You can create the object through the *Form view* or *YAML view*. The following inputs are available through the *Form view*.
-. Enter a name for the new deployment.
-. In *Advanced configurations*:
-.. From the *Admin Password Secret* list, select your xref:create-secret-key-secret_aap-migration[secret key secret].
-.. From the *Database Configuration Secret* list, select the xref:create-postresql-secret_aap-migration[postgres configuration secret].
-. Click btn:[Create].
+.. Enter a name for the new deployment.
+.. In *Advanced configurations*:
+... From the *Admin Password Secret* list, select your xref:create-secret-key-secret_aap-migration[secret key secret].
+... From the *Database Configuration Secret* list, select the xref:create-postresql-secret_aap-migration[postgres configuration secret].
+.. Click btn:[Create].
