--- a/downstream/titles/release-notes/async/aap-25-1-7-oct.adoc
+++ b/downstream/titles/release-notes/async/aap-25-1-7-oct.adoc
@@ -1,15 +1,16 @@
 //This is the working version of the patch release notes document.
 
-[[aap-25-2-patch-release-7-oct-2024]]
+[[aap-25-1-7-oct]]
 
 
-= {PlatformName} 2.5-2 - October 7, 2024
+= {PlatformNameShort} patch release October 7, 2024
 
-This release includes a few enhancements and fixes that have been implemented in the Red Hat {PlatformNameShort} 2.5-2.
+The following enhancements and fixes have been implemented in this release of {PlatformName}.
 
 == Enhancements
 
 * {EDAName} workers and scheduler add timeout and retry resilience when communicating with a Redis cluster. (AAP-32139) 
+
 * Removed the *MTLS* credential type that was incorrectly added. (AAP-31848)
 
 == Fixed issues
@@ -33,27 +34,15 @@ This release includes a few enhancements and fixes that have been implemented in
 
 * Configured the setting *EVENT_STREAM_MTLS_BASE_URL* to the correct default to ensure MTLS is disallowed in the containerized installer. (AAP-31851)
 
-* Fixed a bug where the Event-Driven Ansible workers and scheduler are unable to reconnect to the Redis cluster if a primary Redis node enters a *failed* state and a new primary node is promoted. See the KCS article link:https://access.redhat.com/articles/7088545[Redis failover causes {EDAName} activation failures] that include the steps that were necessary before this bug was fixed. (AAP-30722)
+* Fixed a bug where the {EDAName} workers and scheduler are unable to reconnect to the Redis cluster if a primary Redis node enters a *failed* state and a new primary node is promoted. See the KCS article link:https://access.redhat.com/articles/7088545[Redis failover causes {EDAName} activation failures] that include the steps that were necessary before this bug was fixed. (AAP-30722)
 
 == Advisories
-This section lists the various errata advisories contained in this release.
+The following errata advisories are included in this release:
 
-.Errata advisories
-//cols="a,a" formats the columns as AsciiDoc allowing for AsciiDoc syntax
-[cols="2a,3a", options="header"]
-|===
-| Patch release version | Errata advisory 
+* link:https://access.redhat.com/errata/RHBA-2024:7756[RHBA-2024:7756]
 
-| {PlatformNameShort} 2.5-2 - October 7, 2024
+* link:https://access.redhat.com/errata/RHBA-2024:7760[RHBA-2024:7760]
 
-|
+* link:https://access.redhat.com/errata/RHBA-2024:7766[RHBA-2024:7766]
 
-link:https://access.redhat.com/errata/RHBA-2024:7756[RHBA-2024:7756]
-
-link:https://access.redhat.com/errata/RHBA-2024:7760[>RHBA-2024:7760]
-
-link:https://access.redhat.com/errata/RHBA-2024:7766[RHBA-2024:7766]
-
-link:https://access.redhat.com/errata/RHBA-2024:7810[RHBA-2024:7810]
-
-|===
+* link:https://access.redhat.com/errata/RHBA-2024:7810[RHBA-2024:7810]
