--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -27,4 +27,6 @@ include::topics/aap-25-fixed-issues.adoc[leveloffset=+1]
 
 include::topics/docs-25.adoc[leveloffset=+1]
 
-include::topics/aap-25-2-patch-release-7-oct-2024.adoc[leveloffset=+1]
+include::async/aap-25-2-14-oct.adoc[leveloffset=+1]
+
+include::async/aap-25-1-7-oct.adoc[leveloffset=+1]
