--- a/downstream/modules/platform/ref-redis-config-enterprise-topology.adoc
+++ b/downstream/modules/platform/ref-redis-config-enterprise-topology.adoc
@@ -4,11 +4,28 @@
 :_mod-docs-content-type: REFERENCE
 
 [id="redis-config-enterprise-topology_{context}"]
-= Redis configuration for an enterprise topology
+= Configuring Redis
 
-Redis can be colocated with any other node in a clustered installation.
+{PlatformNameShort} offers a centralized Redis instance in both `standalone` and `clustered` topologies.
 
-* By default the `redis_mode` is set to `cluster`.
-** `redis_mode=cluster`
+In RPM deployments, the Redis mode is set to `cluster` by default. You can change this setting in the inventory file `[all:vars]` section as in the following example:
 
-* For more information about Redis, see link:{URLPlanningGuide}/ha-redis_planning[Caching and queueing system] in _{TitlePlanningGuide}_.
+[source,]
+----
+[all:vars]
+admin_password='<password>'
+pg_host='data.example.com'
+pg_port='5432'
+pg_database='awx'
+pg_username='awx'
+pg_password='<password>'
+pg_sslmode='prefer'  # set to 'verify-full' for client-side enforced SSL
+
+registry_url='registry.redhat.io'
+registry_username='<registry username>'
+registry_password='<registry password>'
+
+redis_mode=cluster 
+----
+
+For more information about Redis, see link:{URLPlanningGuide}/ha-redis_planning[Caching and queueing system] in _{TitlePlanningGuide}_.
