--- a/downstream/modules/platform/proc-modifying-the-run-schedule.adoc
+++ b/downstream/modules/platform/proc-modifying-the-run-schedule.adoc
@@ -6,7 +6,7 @@
 = Modifying the run schedule
 
 
-You can configure metrics-utility to run at specified times and intervals. Run frequency is expressed in cronjobs; see link:https://www.redhat.com/sysadmin/linux-cron-command[How to schedule jobs using the Linux ‘Cron’ utility] for more information. 
+You can configure `metrics-utility` to run at specified times and intervals. Run frequency is expressed in cronjobs. See link:https://www.redhat.com/sysadmin/linux-cron-command[How to schedule jobs using the Linux ‘Cron’ utility] for more information. 
 
 == On RHEL
 .Procedure
@@ -39,7 +39,7 @@ ty build_report
 . On the next screen, select the {ControllerName} tab. 
 . From the list that appears, select your {ControllerName} instance. 
 . On the next screen, select the `YAML` tab. 
-. In the `YAML` file, find the following parameters and enter a variable representing how often metrics-utility should gather data and how often it should produce a report: 
+. In the `YAML` file, find the following parameters and enter a variable representing how often `metrics-utility` should gather data and how often it should produce a report: 
 +
 [source, ]
 ----
@@ -50,6 +50,6 @@ metrics_utility_cronjob_report_schedule:
 . Click btn:[Save].
 . From the navigation menu, select *Deployments* and then select *automation-controller-operator-controller-manager*.
 . Increase the number of pods to 1.
-. To verify that you have changed the metrics-utility running schedule successfully, you can take one or both of the following steps:
+. To verify that you have changed the `metrics-utility` running schedule successfully, you can take one or both of the following steps:
 .. return to the `YAML` file and ensure that the parameters described above reflect the correct variables.  
 .. From the navigation menu, select *Workloads > Cronjobs* and ensure that your cronjobs show the updated schedule. 
