--- a/downstream/assemblies/platform/assembly-metrics-utility.adoc
+++ b/downstream/assemblies/platform/assembly-metrics-utility.adoc
@@ -11,9 +11,9 @@ ifdef::context[:parent-context-of-metrics-utility: {context}]
 
 = Subscription consumption
 
-The {PlatformNameShort} metrics utility tool (metrics-utility) is a command-line utility that is installed on a system containing an instance of {ControllerName}. 
+The {PlatformNameShort} metrics utility tool (`metrics-utility`) is a command-line utility that is installed on a system containing an instance of {ControllerName}. 
 
-When installed and configured, metrics-utility gathers billing-related metrics from your system and creates a consumption-based billing report. Metrics-utility is especially suited for users who have multiple managed hosts and want to use consumption-based billing. Once a report is generated, it is deposited in a target location that you specify in the configuration file. 
+When installed and configured, `metrics-utility` gathers billing-related metrics from your system and creates a consumption-based billing report. Metrics-utility is especially suited for users who have multiple managed hosts and want to use consumption-based billing. Once a report is generated, it is deposited in a target location that you specify in the configuration file. 
 
 Metrics-utility collects two types of data from your system: configuration data and reporting data. 
 
@@ -33,7 +33,7 @@ The reporting data includes the following information:
 * Success or failure information
 * The date and time the report was generated.  
 
-To ensure that metrics-utility continues to work as configured, be sure to clear your report directories of outdated reports regularly. 
+To ensure that `metrics-utility` continues to work as configured, be sure to clear your report directories of outdated reports regularly. 
 
 
 include::platform/proc-configuring-the-metrics-utility.adoc[leveloffset=+1]
