--- a/downstream/modules/platform/ref-general-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-general-inventory-variables.adoc
@@ -26,7 +26,7 @@ Default = `TLSv1.2`
 Each element in the list is provided into `http nginx config` as a separate line. 
 
 Default = empty list
-| `redis_mode` | | Redis can be colocated with any other node in a clustered installation. 
+| `redis_mode` | | Redis can be colocated with automationgateway, automationhub, and automationedacontroller nodes. 
 
 Default = cluster
 | `registry_password` |`registry_password` | This variable is only required if a non-bundle installer is used.
