peer review feedback

--- a/downstream/assemblies/platform/assembly-metrics-utility.adoc
+++ b/downstream/assemblies/platform/assembly-metrics-utility.adoc
@@ -31,9 +31,9 @@ The reporting data includes the following information:
 * Organization name 
 * Project name 
 * Success or failure information
-* The date and time the report was generated.  
+* Report date and time
 
-To ensure that `metrics-utility` continues to work as configured, be sure to clear your report directories of outdated reports regularly. 
+To ensure that `metrics-utility` continues to work as configured, clear your report directories of outdated reports regularly. 
 
 
 include::platform/proc-configuring-the-metrics-utility.adoc[leveloffset=+1]
