--- a/downstream/modules/platform/proc-modifying-the-run-schedule.adoc
+++ b/downstream/modules/platform/proc-modifying-the-run-schedule.adoc
@@ -32,7 +32,7 @@ ty build_report
 == On {OCPShort} from the {PlatformNameShort} operator 
 .Procedure
 
-. From the navigation panel, select *Workloads > Deployments*.
+. From the navigation panel, select menu:Workloads[Deployments].
 . On the next screen, select *automation-controller-operator-controller-manager*.
 . Beneath the heading *Deployment Details*, click the down arrow button to change the number of pods to zero. This will pause the deployment so you can update the running schedule. 
 . From the navigation panel, select *Installed Operators*. From the list of installed operators, select {PlatformNameShort}. 
@@ -48,8 +48,8 @@ metrics_utility_cronjob_report_schedule:
 ----
 +
 . Click btn:[Save].
-. From the navigation menu, select *Deployments* and then select *automation-controller-operator-controller-manager*.
+. From the navigation menu, select menu:Deployments[] and then select *automation-controller-operator-controller-manager*.
 . Increase the number of pods to 1.
 . To verify that you have changed the `metrics-utility` running schedule successfully, you can take one or both of the following steps:
 .. return to the `YAML` file and ensure that the parameters described above reflect the correct variables.  
-.. From the navigation menu, select *Workloads > Cronjobs* and ensure that your cronjobs show the updated schedule. 
+.. From the navigation menu, select menu:Workloads[Cronjobs] and ensure that your cronjobs show the updated schedule. 
